--- a/app/index.html
+++ b/app/index.html
@@ -13,8 +13,8 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/dns-lookup.css">
+<!--     <link rel="stylesheet" href="styles/main.css">
+ -->    <link rel="stylesheet" href="styles/dns-lookup.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <!-- endbuild -->
@@ -23,10 +23,11 @@
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    
+<div class="heading-container">
+<h1>DNS Lookup</h1>
+</div>
 <div class="container">
 
-<h1>DNS Lookup</h1>
 <div class="form-group query-container">
  
   <textarea class="form-control" rows="5" id="query" placeholder="Paste hostnames or ip addresses here."></textarea>
