--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,16 @@
 </button>
 </div>
 
+
+<table class="table hostnameTable clear">
+  <tr><th>A Records</th><th></th></tr>
+</table>
+
+<table class="table ipTable">
+  <tr><th>PTR Records</th><th></th></tr>
+
+</table>
+<!-- 
 <div class="results clear">
   <div class="panel panel-default hostname-panel">
     <div class="panel-heading">A Records</div>
@@ -48,15 +58,15 @@
       </table>
     </div>
   </div>
-
-  <div class="panel panel-default  ip-panel">
+ -->
+<!--   <div class="panel panel-default  ip-panel">
     <div class="panel-heading">PTR Records</div>
     <div class="panel-body">
       <table class="table ipTable">
       </table>
     </div>
   </div>
-</div>
+</div> -->
 <!-- 
       <div class="footer">
         <p><span class="glyphicon glyphicon-heart"></span> from Solo</p>
