--- a/app/index.html
+++ b/app/index.html
@@ -34,14 +34,9 @@
 
 </div>
 
-<div class="submit-container">
-<button type="button" class="btn btn-primary pull-right submit" aria-expanded="false">
-  Submit
-</button>
-</div>
 
 
-<table class="table hostnameTable clear">
+<table class="table hostnameTable">
   <tr><th>A Records</th><th></th></tr>
 </table>
 
@@ -49,35 +44,14 @@
   <tr><th>PTR Records</th><th></th></tr>
 
 </table>
-<!-- 
-<div class="results clear">
-  <div class="panel panel-default hostname-panel">
-    <div class="panel-heading">A Records</div>
-    <div class="panel-body">
-      <table class="table hostnameTable">
-      </table>
-    </div>
-  </div>
- -->
-<!--   <div class="panel panel-default  ip-panel">
-    <div class="panel-heading">PTR Records</div>
-    <div class="panel-body">
-      <table class="table ipTable">
-      </table>
-    </div>
-  </div>
-</div> -->
-<!-- 
-      <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from Solo</p>
-      </div>
- -->
+
     </div>
 
 </div>
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/lodash/lodash.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
