--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,9 @@
 </table>
 
     </div>
+<div class="startover">
+    <button class="btn btn-default" onClick="window.location.reload()">Start Over</button>
+    </div>
 
 </div>
     <!-- build:js(.) scripts/vendor.js -->
